# jp

./: .clippy.toml  .gitattributes  .gitignore  .ignore  .rustfmt.toml  .sandwormignore  .taplo.toml  .typos.toml  Cargo.toml  Dockerfile  README.md  bacon.toml  deny.toml  justfile  plugins.json  rust-toolchain.toml
crates/jp_attachment/: Cargo.toml  README.md
crates/jp_attachment/src/: lib.rs
crates/jp_attachment_agentic_shepherd/: Cargo.toml  README.md
crates/jp_attachment_agentic_shepherd/src/: lib.rs  lib_tests.rs  model.rs  render.rs  render_tests.rs  uri.rs  uri_tests.rs
crates/jp_attachment_agentic_shepherd/src/fixtures/: issue-220.json
crates/jp_attachment_bear_note/: Cargo.toml  README.md
crates/jp_attachment_bear_note/src/: lib.rs  lib_tests.rs
crates/jp_attachment_cmd_output/: Cargo.toml  README.md
crates/jp_attachment_cmd_output/src/: lib.rs  lib_tests.rs
crates/jp_attachment_file_content/: Cargo.toml  README.md
crates/jp_attachment_file_content/src/: lib.rs  lib_tests.rs
crates/jp_attachment_github/: Cargo.toml
crates/jp_attachment_github/src/: lib.rs  lib_tests.rs
crates/jp_attachment_http_content/: Cargo.toml  README.md
crates/jp_attachment_http_content/src/: lib.rs  lib_tests.rs
crates/jp_attachment_internal/: Cargo.toml  README.md
crates/jp_attachment_internal/src/: lib.rs  lib_tests.rs  selector.rs  selector_tests.rs
crates/jp_attachment_mcp_resources/: Cargo.toml  README.md
crates/jp_attachment_mcp_resources/src/: lib.rs
crates/jp_cli/: Cargo.toml  build.rs
crates/jp_cli/src/: access.rs  bootstrap.rs  bootstrap_tests.rs  cmd.rs  config_pipeline.rs  config_pipeline_tests.rs  ctx.rs  editor.rs  editor_tests.rs  error.rs  format.rs  format_tests.rs  lib.rs  lib_tests.rs  main.rs  output.rs  output_tests.rs  parser.rs  parser_tests.rs  render.rs  schema.rs  schema_tests.rs  session.rs  session_tests.rs  shared.rs  signals.rs  signals_testing.rs  signals_tests.rs  timer.rs  timer_tests.rs
crates/jp_cli/src/access/: approvals.rs  approvals_tests.rs  compile.rs  compile_tests.rs  mount.rs  mount_tests.rs
crates/jp_cli/src/cmd/: attachment.rs  attachment_tests.rs  compact_flag.rs  compact_flag_tests.rs  config.rs  conversation.rs  conversation_id.rs  conversation_id_tests.rs  init.rs  init_tests.rs  lock.rs  mcp.rs  persona.rs  plugin.rs  query.rs  query_tests.rs  target.rs  target_tests.rs  time.rs  time_tests.rs  turn_range.rs  turn_range_tests.rs  workspace.rs
crates/jp_cli/src/editor/: parser.rs  (+1 more)
crates/jp_config/: Cargo.toml
crates/jp_config/src/: assignment.rs  assignment_tests.rs  assistant.rs  assistant_tests.rs  config.rs  conversation.rs  conversation_tests.rs  delta.rs  editor.rs  editor_tests.rs  error.rs  fill.rs  fs.rs  fs_tests.rs  internal.rs  interrupt.rs  interrupt_tests.rs  lib.rs  lib_tests.rs  llm.rs  loader.rs  loader_tests.rs  map.rs  mcp.rs  model.rs  model_tests.rs  parse.rs  partial.rs  plugins.rs  providers.rs  serde.rs  style.rs  style_tests.rs  template.rs  template_tests.rs  types.rs  user.rs  util.rs  util_tests.rs  validate.rs
crates/jp_conversation/: Cargo.toml
crates/jp_conversation/src/: compaction.rs  compaction_tests.rs  compat.rs  compat_tests.rs  context.rs  conversation.rs  conversation_tests.rs  error.rs  event.rs  event_builder.rs  event_builder_tests.rs  id.rs  lib.rs  message.rs  model.rs  persona.rs  storage.rs  storage_tests.rs  stream.rs  stream_tests.rs  thread.rs
crates/jp_editor/: Cargo.toml
crates/jp_editor/src/: lib.rs
crates/jp_editor/tests/: terminal.rs
crates/jp_format/: Cargo.toml
crates/jp_format/src/: conversation.rs  datetime.rs  lib.rs
crates/jp_github/: Cargo.toml
crates/jp_github/src/: client.rs  error.rs  handlers.rs  lib.rs  models.rs  page.rs  params.rs  tests.rs
crates/jp_id/: Cargo.toml
crates/jp_id/src/: error.rs  global.rs  lib.rs  parts.rs  parts_tests.rs  serde.rs
crates/jp_inquire/: Cargo.toml
crates/jp_inquire/src/: inline_reply.rs  inline_reply_tests.rs  inline_select.rs  inline_select_tests.rs  lib.rs  prompt.rs
crates/jp_llm/: Cargo.toml
crates/jp_llm/src/: error.rs  error_tests.rs  event.rs  event_builder.rs  event_builder_tests.rs  lib.rs  model.rs  model_tests.rs  provider.rs  provider_tests.rs  query.rs  retry.rs  retry_tests.rs  stream.rs  stream_tests.rs  structured.rs  test.rs  title.rs  title_tests.rs  tool.rs  tool_tests.rs
crates/jp_llm/tests/: structured_test.rs
crates/jp_macro/: Cargo.toml
crates/jp_macro/src/: lib.rs
crates/jp_mcp/: Cargo.toml  README.md
crates/jp_mcp/src/: client.rs  client_tests.rs  config.rs  error.rs  id.rs  lib.rs  tool.rs  transport.rs
crates/jp_md/: Cargo.toml
crates/jp_md/src/: ansi.rs  ansi_tests.rs  buffer.rs  buffer_tests.rs  color.rs  color_tests.rs  format.rs  format_tests.rs  heading.rs  heading_tests.rs  lib.rs  render.rs  shade.rs  shade_tests.rs  table.rs  table_tests.rs  theme.rs  writer.rs  writer_tests.rs
crates/jp_md/tests/: buffer.rs  comrak_cross_validation.rs  fuzz_buffer.rs  streaming_identity.rs
crates/jp_model/: Cargo.toml
crates/jp_model/src/: error.rs  lib.rs
crates/jp_openrouter/: Cargo.toml  README.md
crates/jp_openrouter/src/: client.rs  error.rs  lib.rs  responses.rs  responses_tests.rs  types.rs
crates/jp_openrouter/tests/: client_test.rs
crates/jp_plugin/: Cargo.toml
crates/jp_plugin/src/: lib.rs  lib_tests.rs  message.rs  message_tests.rs  protocol.rs  registry.rs  registry_tests.rs
crates/jp_printer/: Cargo.toml
crates/jp_printer/src/: ansi.rs  ansi_tests.rs  lib.rs  printer.rs  printer_tests.rs  typewriter.rs
crates/jp_query/: Cargo.toml  README.md
crates/jp_query/src/: lib.rs  structured.rs
crates/jp_serde/: Cargo.toml
crates/jp_serde/src/: lib.rs  repr.rs  skip_if.rs
crates/jp_storage/: Cargo.toml
crates/jp_storage/src/: backend.rs  error.rs  lib.rs  lib_tests.rs  load.rs  lock.rs  trash.rs  trash_tests.rs  validate.rs  validate_tests.rs  value.rs  value_tests.rs
crates/jp_storage/tests/: backend_parity_tests.rs
crates/jp_task/: Cargo.toml
crates/jp_task/src/: handler.rs  lib.rs  task.rs
(+1667 files in other folders)
