[workspace]
members = ["crates/*", ".config/jp/tools/"]
resolver = "3"

[workspace.dependencies]
jp_attachment = { path = "crates/jp_attachment" }
jp_attachment_bear_note = { path = "crates/jp_attachment_bear_note" }
jp_attachment_cmd_output = { path = "crates/jp_attachment_cmd_output" }
jp_attachment_file_content = { path = "crates/jp_attachment_file_content" }
jp_attachment_mcp_resources = { path = "crates/jp_attachment_mcp_resources" }
jp_config = { path = "crates/jp_config" }
jp_conversation = { path = "crates/jp_conversation" }
jp_format = { path = "crates/jp_format" }
jp_id = { path = "crates/jp_id" }
jp_inquire = { path = "crates/jp_inquire" }
jp_llm = { path = "crates/jp_llm" }
jp_macro = { path = "crates/jp_macro" }
jp_mcp = { path = "crates/jp_mcp" }
jp_openrouter = { path = "crates/jp_openrouter" }
jp_serde = { path = "crates/jp_serde" }
jp_storage = { path = "crates/jp_storage" }
jp_task = { path = "crates/jp_task" }
jp_term = { path = "crates/jp_term" }
jp_test = { path = "crates/jp_test" }
jp_tombmap = { path = "crates/jp_tombmap" }
jp_tool = { path = "crates/jp_tool" }
jp_workspace = { path = "crates/jp_workspace" }

ahash = { version = "0.8", default-features = false, features = ["runtime-rng", "std", "serde"] }
assert_matches = { version = "1", default-features = false }
async-anthropic = { git = "https://github.com/JeanMertz/async-anthropic", default-features = false }
async-stream = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false }
backon = { version = "1", default-features = false }
base64 = { version = "0.22", default-features = false }
bat = { version = "0.25", default-features = false }
clap = { version = "4", default-features = false }
comfy-table = { version = "7", default-features = false }
comrak = { version = "0.41", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false }
crossterm = { version = "0.29", default-features = false }
dhat = { version = "0.3", default-features = false }
directories = { version = "6", default-features = false }
duct = { version = "1", default-features = false }
duct_sh = { version = "1", default-features = false }
dyn-clone = { version = "1", default-features = false }
dyn-hash = { version = "0.2", default-features = false }
fancy-regex = { version = "0.16", default-features = false }
futures = { version = "0.3", default-features = false }
gemini_client_rs = { git = "https://github.com/JeanMertz/gemini-client", default-features = false } # <https://github.com/Adriftdev/gemini-client/pull/16>
glob = { version = "0.3", default-features = false }
grep-printer = { version = "0.2", default-features = false }
grep-regex = { version = "0.1", default-features = false }
grep-searcher = { version = "0.1", default-features = false }
httpmock = { git = "https://github.com/JeanMertz/httpmock", branch = "tweaks", default-features = false }
ignore = { version = "0.4", default-features = false }
indexmap = { version = "2", default-features = false }
indoc = { version = "2", default-features = false }
inquire = { git = "https://github.com/JeanMertz/inquire", branch = "submit-on-valid-parse", default-features = false } # <https://github.com/mikaelmello/inquire/pull/321>
insta = { version = "1", default-features = false }
itertools = { version = "0.14", default-features = false }
jsonschema = { version = "0.37", default-features = false }
linkme = { version = "0.3", default-features = false }
minijinja = { version = "2", default-features = false }
octocrab = { version = "0.45", default-features = false }
ollama-rs = { version = "0.3", default-features = false }
open-editor = { version = "1", default-features = false }
openai = { git = "https://github.com/JeanMertz/openai", branch = "tmp", default-features = false } # <https://github.com/rellfy/openai/pull/57>
openai_responses = { git = "https://github.com/JeanMertz/openai-responses-rs", default-features = false } # <https://github.com/m1guelpf/openai-responses-rs/pull/6>
paste = { version = "1", default-features = false }
path-clean = { version = "1", default-features = false }
percent-encoding = { version = "2", default-features = false }
pretty_assertions = { version = "1", default-features = false }
quick-xml = { version = "0.38", default-features = false }
rayon = { version = "1", default-features = false }
relative-path = { version = "2", default-features = false }
reqwest = { version = "0.12", default-features = false }
reqwest-eventsource = { version = "0.6", default-features = false }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "18346b94e4e71463a06d93852cfc26c683ca5b83" }
rusqlite = { version = "0.37", default-features = false }
saphyr = { git = "https://github.com/JeanMertz/saphyr", branch = "jean/fix-multinewline-endings", default-features = false } # <https://github.com/saphyr-rs/saphyr/pull/90>
schemars = { version = "1.0.0-alpha.17", default-features = false }
schemars_08 = { package = "schemars", version = "0.8.22", default-features = false }
schematic = { git = "https://github.com/JeanMertz/schematic", branch = "merged", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_json5 = { version = "0.2", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serial_test = { version = "3", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
similar = { version = "2", default-features = false }
strip-ansi-escapes = { version = "0.2", default-features = false }
tempfile = { version = "3", default-features = false }
termimad = { version = "0.34", default-features = false }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false }
timeago = { version = "0.5", default-features = false }
tokio = { version = "1", default-features = false, features = ["full"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = { version = "0.9", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
typetag = { version = "0.2", default-features = false }
url = { version = "2", default-features = false }
which = { version = "8", default-features = false }

[workspace.package]
authors = ["Jean Mertz <git@jeanmertz.com>"]
description = "Jean-Pierre, a programmer's LLM toolkit."
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/dcdpr/jp"
repository = "https://github.com/dcdpr/jp"
documentation = "https://docs.rs/jp"
license-file = "LICENSE"
readme = "README.md"
publish = false

[workspace.lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
missing_docs = "allow" # Temporary
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = { level = "warn", priority = -1 } # See: <https://github.com/rust-lang/rust-clippy/pull/12827>
tail_expr_drop_order = "allow"
unstable-features = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
assigning_clones = "allow"
enum_glob_use = "allow"
format_push_string = "allow"
inefficient_to_string = "allow"
missing_errors_doc = "allow" # Temporary
option_option = "allow"
pedantic = { level = "warn", priority = -1 }
result_large_err = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[profile.profiling]
inherits = "release"
debug = true
