[package]
name = "jp_attachment"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_mcp = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
dyn-clone = { workspace = true }
dyn-hash = { workspace = true }
linkme = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
typetag = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
