[package]
name = "jp_attachment_agentic_shepherd"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_mcp = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
duct = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
