[package]
name = "jp_attachment_bear_note"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
license-file.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
jp_attachment = { workspace = true }

directories = { workspace = true }
percent-encoding = { workspace = true }
quick-xml = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
