[package]
name = "jp_attachment_bear_note"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_mcp = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
directories = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
rusqlite = { workspace = true, features = ["bundled", "array", "vtab"] }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
