[package]
name = "jp_attachment_cmd_output"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_mcp = { workspace = true }

async-trait = { workspace = true }
duct = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
url = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
