[package]
name = "jp_attachment_file_content"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_mcp = { workspace = true }

async-trait = { workspace = true }
crossbeam-channel = { workspace = true, features = ["std"] }
glob = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
