[package]
name = "jp_attachment_github"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_github = { workspace = true }
jp_mcp = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
glob = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[lints]
workspace = true

[lib]
doctest = false
