[package]
default-run = "jp"
name = "jp_cli"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_attachment_bear_note = { workspace = true }
jp_attachment_cmd_output = { workspace = true }
jp_attachment_file_content = { workspace = true }
jp_attachment_http_content = { workspace = true }
jp_attachment_mcp_resources = { workspace = true }
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_format = { workspace = true }
jp_id = { workspace = true }
jp_inquire = { workspace = true }
jp_llm = { workspace = true }
jp_macro = { workspace = true }
jp_mcp = { workspace = true }
jp_openrouter = { workspace = true }
jp_storage = { workspace = true }
jp_task = { workspace = true }
jp_term = { workspace = true }
jp_tool = { workspace = true }
jp_workspace = { workspace = true }

async-stream = { workspace = true }
bat = { workspace = true, features = ["regex-onig"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
] }
comfy-table = { workspace = true, features = ["tty", "custom_styling"] }
comrak = { workspace = true }
crossterm = { workspace = true }
dhat = { workspace = true, optional = true }
duct = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
inquire = { workspace = true, features = ["crossterm"] }
itertools = { workspace = true, features = ["use_std"] }
minijinja = { workspace = true }
path-clean = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
strip-ansi-escapes = { workspace = true }
termimad = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["local-offset"] }
timeago = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
    "valuable",
] }
url = { workspace = true }
which = { workspace = true, features = ["real-sys"] }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true, features = ["toml"] }
pretty_assertions = { workspace = true, features = ["std"] }
serial_test = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "jp"
path = "src/main.rs"

[features]
dhat = ["dep:dhat"]
