[package]
default-run = "jp"
name = "jp_cli"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_attachment_bear_note = { workspace = true }
jp_attachment_cmd_output = { workspace = true }
jp_attachment_file_content = { workspace = true }
jp_attachment_http_content = { workspace = true }
jp_attachment_mcp_resources = { workspace = true }
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_editor = { workspace = true }
jp_id = { workspace = true }
jp_inquire = { workspace = true }
jp_llm = { workspace = true }
jp_macro = { workspace = true }
jp_mcp = { workspace = true }
jp_md = { workspace = true }
jp_openrouter = { workspace = true }
jp_plugin = { workspace = true }
jp_printer = { workspace = true }
jp_storage = { workspace = true }
jp_task = { workspace = true }
jp_term = { workspace = true }
jp_tool = { workspace = true }
jp_workspace = { workspace = true }

async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true, features = ["std"] }
camino = { workspace = true }
camino-tempfile = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
] }
clean-path = { workspace = true }
comfy-table = { workspace = true, features = ["tty", "custom_styling"] }
comrak = { workspace = true }
crossterm = { workspace = true }
dhat = { workspace = true, optional = true }
duct = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
inquire = { workspace = true, features = ["crossterm"] }
minijinja = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
relative-path = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
schematic = { workspace = true, features = ["schema_serde", "renderer_template", "toml"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sha2 = { workspace = true }
strip-ansi-escapes = { workspace = true }
syntect = { workspace = true, features = ["regex-fancy", "default-themes", "default-syntaxes"] }
thiserror = { workspace = true }
timeago = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "smallvec",
    "std",
    "tracing-log",
    "valuable",
] }
url = { workspace = true }
which = { workspace = true, features = ["real-sys"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
chrono = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
camino-tempfile = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
serial_test = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "jp"
path = "src/main.rs"

[features]
dhat = ["dep:dhat"]

[lib]
doctest = false
