[package]
name = "jp_config"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_mcp = { workspace = true }
jp_model = { workspace = true }

confique = { workspace = true, features = ["toml", "yaml", "json5"] }
directories = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
json5 = { workspace = true }
path-clean = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse", "serde", "display"] }
toml_edit = { workspace = true, features = ["serde", "parse", "display"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
