[package]
name = "jp_config"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_id = { workspace = true }

directories = { workspace = true }
duct = { workspace = true }
duct_sh = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
path-clean = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
relative-path = { workspace = true, features = ["serde", "alloc", "std"] }
schematic = { workspace = true, features = [
    "config",
    "env",
    "json",
    "toml",
    "yaml",
    "schema",
    "type_relative_path",
    "type_indexmap",
    "type_url",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_json5 = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse", "serde", "display", "preserve_order"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
which = { workspace = true, features = ["real-sys"] }

[dev-dependencies]
assert_matches = { workspace = true }
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
